# python-project-52

./: .coverage  .gitignore  Makefile  README.md  build.sh  conftest.py  pyproject.toml  render.yaml  ruff.toml  sonar-project.properties
.github/workflows/: build.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
locate/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: manage.py  settings.py  urls.py
task_manager/data/: db.sqlite3
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_rename_taskstate_taskstatus.py
task_manager/task_manager/: asgi.py  settings.py  wsgi.py
task_manager/tasks/: admin.py  apps.py  filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: labels.json  taskstates.json  users.json
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_taskmembership_unique_together.py  0003_rename_title_task_name.py  0004_rename_taskstatehistory_taskstatushistory_and_more.py
task_manager/tasks/services/: __init__.py  permissions.py
task_manager/templates/: delete.html  index.html  layout.html
task_manager/templates/labels/: base.html  create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: base.html  create.html  index.html  update.html
task_manager/templates/tasks/: base.html  delete.html  index.html  show.html  update.html
task_manager/templates/users/: base.html  create.html  delete.html  index.html  login.html  update.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
