[project]
name = "hexlet-code"
version = "0.1.0"
description = "Some task manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "django-bootstrap5>=25.3",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.11",
    "ruff>=0.14.10",
    "uvicorn>=0.38.0",
    "whitenoise>=6.11.0",
]

[tool.poetry.dependencies]
psycopg2-binary = "2.9.11"
