[project]
name = "hexlet-code"
version = "0.1.0"
description = "Some task manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "django-bootstrap5>=25.3",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "whitenoise>=6.11.0",
    "psycopg2-binary==2.9.11",
    "rollbar>=1.0.0",
    "ruff>=0.14.10",
    "uvicorn>=0.38.0"
]

[tool.uv.build-system]
backend = "setuptools.build_meta"
requires = ["setuptools>=65", "wheel"]

[tool.setuptools.packages.find]
where = ["."]
include = ["task_manager", "locale"]
