[project]
name = "hexlet-code"
version = "0.1.0"
description = "Some task manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "django-bootstrap5>=25.3",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "whitenoise>=6.11.0",
    "psycopg2-binary==2.9.11",
    "rollbar>=1.0.0",
    "ruff>=0.14.10",
    "uvicorn>=0.38.0",
    "django-filter>=23.1",
    "django-widget-tweaks>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["task_manager", "locale"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]
